--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.application.name=education-erp
 spring.profiles.active=dev
 
 # Database Configuration
-# Use Replit's individual PostgreSQL environment variables
-spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:education_erp}?sslmode=require
-spring.datasource.username=${PGUSER:education_erp_user}
-spring.datasource.password=${PGPASSWORD:education_erp_password}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# H2 in-memory for local development
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # HikariCP Configuration
 spring.datasource.hikari.maximum-pool-size=20
@@ -23,20 +23,16 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.max-lifetime=1200000
 
 # JPA Configuration
-# Using 'update' instead of 'validate' to allow Hibernate to create missing tables
-# TODO: Create proper Flyway migrations for all entities in production
-spring.jpa.hibernate.ddl-auto=update
+# Using 'create-drop' for H2 in-memory database
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.physical_naming_strategy=com.educationerp.core.config.TayfunAksayNamingStrategy
 
 # Flyway Configuration
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
-spring.flyway.validate-on-migrate=true
+spring.flyway.enabled=false
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:education-erp-secret-key-that-should-be-at-least-256-bits-long-for-security}
